deploy/keycloak/config/keycloak-route.yaml
# deploy/keycloak/config/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: eg
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      filters:                                   # <-- ADD THIS BLOCK
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: "https"
              - name: X-Forwarded-Port
                value: "443"
      backendRefs:
        - name: example-kc-service
          port: 8080
